# Oskour

./: .gitignore  README.md  Roadmap.md  pyproject.toml  requirements.txt
customConstraintBuilder/: custom_constraints.yaml
customConstraintBuilder/src/: App.java
customConstraintBuilder/src/constraint/: Constraint.java  CopainsPJs.java  CopainsPJsScenarRonde.java  CopainsPjMjScenar.java  CopainsPjs.java  CopainsPjsRonde.java  CopainsPjsScenarRonde.java  PJsScenarRonde.java  PasCopainsPjs.java  PjsScenarRonde.java  Utility.java
examples/01/: Equipes.csv  custom_constraints.yaml
examples/02/: MJ.csv  PjVolants.csv  Scenars.csv  custom_constraints.yaml  param_conv.csv
oskour/: convSolver.py  conv_solver.py  customConstraint.py  dataStructure.py  evalFunction.py  exportMethods.py  import_methods.py  ioFunc.py  main.py  postProcessing.py  post_processing.py
src/oskour/: __main__.py  convSolver.py  customConstraint.py  dataStructure.py  ioFunc.py  parsing.py  postProcessing.py  valueFunctions.py
tutorial/: custom_constraints_tutorial.md
tutorial/latex_tutorial/: presentation.tex
